objects/vlocity_ins__ProviderTaxonomy__c.object
<CustomObject>
    <description>Represents an individual service provider&apos;s specialty</description>
    <fields>
        <fullName>vlocity_ins__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProviderAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Provider</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ProviderLocation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Provider Account Taxonomies</relationshipLabel>
        <relationshipName>ProviderAccountTaxonomies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProviderContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Provider</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Provider Contact Taxonomies</relationshipLabel>
        <relationshipName>ProviderContactTaxonomies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TaxonomyCodeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Taxonomy Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>vlocity_ins__VlocityCode__c.vlocity_ins__Category__c</field>
                <operation>equals</operation>
                <value>NUCC Taxonomy Code</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_ins__VlocityCode__c</referenceTo>
        <relationshipLabel>Provider Taxonomies</relationshipLabel>
        <relationshipName>ProviderTaxonomies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Provider Taxonomy</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Taxonomies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>